kubernetes/environments/local/patches/namespace-labels.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    lattix.io/mesh: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: services
  labels:
    lattix.io/mesh: disabled
