kubernetes/environments/local/patches/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lattix-gateway
  namespace: gateway
spec:
  tls:
    - hosts:
        - lattix.local
      secretName: lattix-gateway-local-tls
  rules:
    - host: lattix.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lattix-tools
  namespace: tools
spec:
  tls:
    - hosts:
        - tools.lattix.local
      secretName: lattix-tools-local-tls
  rules:
    - host: tools.lattix.local
